# hirequest

./: .env.example  .gitignore  README.md  docker-compose.yaml  interview.db
assets/: Dockerfile  entrypoint.sh  pyproject.toml  requirements.txt
assets/src/assets/chunks/Advanced_ML/: Artificial_Intelligence,_Machine_Learning,_and_Deep_Learning_chunks.json  Bishop-Pattern-Recognition-and-Machine-Learning-2006_chunks.json
assets/src/assets/chunks/Data_Science/: Master_Machine_Learning_Algorithms_PDF_chunks.json  (+1 more)
backend/: Dockerfile  pyproject.toml  requirements.txt
backend/src/: main.py
backend/src/api/: candidate.py  interview.py
backend/src/backend/: config.py  main.py
backend/src/backend/api/: candidate.py  interview.py
backend/src/backend/db/: crud.py  db.py  db_tracking.py  models.py
backend/src/backend/middleware/: parser.py  vectorstore.py
backend/src/backend/schemas/: schemas.py
backend/src/backend/services/: domain_chains.py  router_chain.py  summary_chain.py
backend/src/db/: crud.py  models.py
backend/src/middleware/: parser.py  vectorstore.py
backend/src/schemas/: schemas.py
backend/src/services/: domain_chains.py  router_chain.py
db/: Dockerfile
frontend/: Dockerfile  index.html  package-lock.json  package.json  tailwind.config.js
frontend/src/: App.jsx  index.css
frontend/src/components/: ChatUI.jsx  LandingPage.jsx
k8s/: namespace.yaml  stack.yaml
k8s/assets/: job.yaml  pvc.yaml
k8s/backend/: deployment.yaml  pvc-db.yaml  service.yaml
k8s/frontend/: deployment.yaml  service.yaml
k8s/ingress/: ingress.yaml
(+10 files in other folders)
