[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "backend"
version = "0.1.0"
description = "HireQuest backend interview simulation service"
authors = [{ name = "Pranav" }]
dependencies = [
    "langchain",
    "langchain-community",
    "langchain-huggingface",
    "langchain-openai",
    "fastapi",
    "uvicorn",
    "sqlalchemy",
    "python-multipart",
    "faiss-cpu"
]

[tool.setuptools.packages.find]
where = ["src"]
